static/styles/base.css
/* ... */
#submit-form-login-link{
    position: absolute;
    left: 381px;
    width: 89px;
    height: 25px;
    font-family: "Win95";
    margin-top: 155px;
    text-decoration: none;
}

#submit-form-login-text{
    margin: 0;
    color: black;
    
}

#submit-form-register-link{
    position: absolute;
    left: 480px;
    width: 89px;
    height: 25px;
    font-family: "Win95";
    margin-top: 155px;
    text-decoration: none;
}

#submit-form-register-text{
    margin: 0;
    color: black;
    
}

#submit-form-logout-link{
    position: absolute;
    left: 480px;
    width: 89px;
    height: 25px;
    font-family: "Win95";
    margin-top: 155px;
    text-decoration: none;
}

#submit-form-logout-text{
    margin: 0;
    color: black;
    
}

#transparent-background{
    position: absolute;
    width: 754px;
    height: 133%;
    top: -192px;
    left: -26px;
    background-color: rgba(0, 0, 0, 0.5);
    z-index: -3;
}

#profile-body{
    position: absolute;
    width:100%;
    height:100%;
    text-align: center;
    overflow: scroll;
}

#upvote-text{
    position: absolute;
    top:15px;
    left: 68px;
    font-size: 15px;
}

#selector {
    position: absolute;
    top: -178px;
    left: 541px;
    width: 119px;
    transform: rotate(-45deg);
    z-index: 1;
}


#bandnames-table-div-profile{
    width: 100%;
    margin-left: auto;
    margin-right: auto;
}

#profile-form{
    text-align: center;
    margin-bottom: 25px;
    
}

#bandnames-table-profile-wrapper{
    width: 400px;
    margin-left: auto;
    margin-right:auto;
}

.dataTables_wrapper .dataTables_paginate .paginate_button.current {
    background: rgb(150, 218, 156) !important;
}

.dataTables_wrapper .dataTables_paginate .paginate_button {
    background: rgb(169, 169, 169) !important;
    margin:       auto !important;
    padding:      1px !important;
}

.dataTables_wrapper .dataTables_paginate {
    float:       left;
    text-align:  left !important;
    padding-top: 0.3em;
}

.dataTables_wrapper .dataTables_length, .dataTables_wrapper .dataTables_filter, .dataTables_wrapper .dataTables_info, .dataTables_wrapper .dataTables_processing, .dataTables_wrapper .dataTables_paginate {
    color: #9f9f9f !important;
}

#profile-body-top {
    position: relative;
    width: 400px;
    margin: auto;
    text-align: center;
    height: 100%;
    padding: 10px;
}

#profile-body-top-contents {
    position: absolute;
    top: 0px;
    left: 0px;
    margin: auto;
    width: 100%;
}

#profile-body-top-img {
    width: 100%;
    height: 725px;
    
}

table.dataTable thead > tr > th.sorting::after, 
table.dataTable thead > tr > th.sorting_asc::after, 
table.dataTable thead > tr > th.sorting_desc::after, 
table.dataTable thead > tr > th.sorting_asc_disabled::after, 
table.dataTable thead > tr > th.sorting_desc_disabled::after, 
table.dataTable thead > tr > td.sorting::after, 
table.dataTable thead > tr > td.sorting_asc::after, 
table.dataTable thead > tr > td.sorting_desc::after, 
table.dataTable thead > tr > td.sorting_asc_disabled::after, 
table.dataTable thead > tr > td.sorting_desc_disabled::after {
    content: "" !important;
}


table.dataTable thead > tr > th.sorting::before, 
table.dataTable thead > tr > th.sorting_asc::before, 
table.dataTable thead > tr > th.sorting_desc::before, 
table.dataTable thead > tr > th.sorting_asc_disabled::before, 
table.dataTable thead > tr > th.sorting_desc_disabled::before, 
table.dataTable thead > tr > td.sorting::before, 
table.dataTable thead > tr > td.sorting_asc::before, 
table.dataTable thead > tr > td.sorting_desc::before, 
table.dataTable thead > tr > td.sorting_asc_disabled::before, 
table.dataTable thead > tr > td.sorting_desc_disabled::before {
    content: "" !important;
}

#profile-header{
    width: 400px;
    margin: auto;
    margin-bottom: 15px;
}

#sign-div {
    width: 100%;
    height: 50%;
    margin: auto;
    padding-top: 41px;
}

.center {
    text-align: center;
}

#doth-text {
    visibility: hidden;
}

.static {
    width: 110px;
    position: absolute;
    bottom: 17px;
    image-rendering: crisp-edges;
    z-index: 2;
    left: 106px;
}

.static:hover {
    opacity: 0
}

.win95-font {
    font-family: "Win95";
}

.floating {  
    animation-name: floating;
    animation-duration: 3s;
    animation-iteration-count: infinite;
    animation-timing-function: ease-in-out;
}

.glow {
    color: #fff;
    text-align: center;
    -webkit-animation: glow 3s ease-in-out infinite alternate;
    -moz-animation: glow 3s ease-in-out infinite alternate;
    animation: glow 3s ease-in-out infinite alternate;
  }
  
@keyframes glow {
    from {
      text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
    }
    to {
      text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
    }
    0% { transform: translate(0,  0px); }
    50%  { transform: translate(0, 15px); }
    100%   { transform: translate(0, -0px); }  
  }

